<resources>
    <string name="app_name" translatable="false">Indulger</string>
    <string name="about_title">About</string>
    <string name="about_github" translatable="false">Github</string>
    <string name="github_url" translatable="false">https://github.com/zx1239856/indulger</string>
    <string name="copyright">inftyloop.tech©2019, All Rights Reserved</string>

    <string name="home">Home</string>
    <string name="fav">Favorites</string>
    <string name="personal">Me</string>

    <string name="settings_title">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_clear_cache">Clear Cache</string>
    <string name="settings_cache_all_cleared">Cache All Cleared</string>
    <string name="settings_language">Language</string>
    <string name="settings_lang_chn" translatable="false">中文（简体）</string>
    <string name="settings_lang_en" translatable="false">English</string>
    <string name="settings_about">About</string>
    <string name="settings_confirm_clear_cache">Confirm deletion of all cache?</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_delete">Delete</string>
    <string name="me_title">Me</string>
    <string name="me_grouplist_settings">Settings</string>
    <string name="settings_cache_clearing">Clearing</string>
    <string name="night_theme_name" translatable="false">NightTheme</string>
    <string name="day_theme_name" translatable="false">DayTheme</string>
    <string name="toutiao_theme_name" translatable="false">ToutiaoTheme</string>
    <string name="jiujing_theme_name" translatable="false">JiujingTheme</string>

    <string name="favorite_title">Favorites</string>
    <string name="favorite_cancel">Cancel</string>
    <string name="favorite_delete">Delete</string>
    <string name="favorite_no_more">Nothing More</string>
    <string name="home_news_type_my_channel">My Channel</string>
    <string name="home_news_type_channel_edit">Edit</string>
    <string name="home_news_type_channel_edit_complete">Complete</string>
    <string name="home_news_type_channel_recommend">Recommended</string>
    <string name="home_search_prompt">Search what you want</string>
    <string name="channel_code_video" translatable="false">video</string>
    <string name="channel_code_recommend" translatable="false">recommend</string>
    <string name="settings_lang_system">Follow System</string>
    <string name="settings_theme_default">Default</string>
    <string name="settings_theme_toutiao">Toutiao Red</string>
    <string name="settings_theme_jiujing">9# Green</string>
    <string name="settings_lang_auto">Automatic</string>
    <string name="home_search_submit">Submit</string>
    <string name="search_history">Search History</string>
    <string name="search_search">Search</string>
    <string name="confirm_clear_search_history">Are you sure to clear all search history?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="share_wechat_moment">WeChat Moment</string>
    <string name="share_wechat_friend">WeChat Friends</string>
    <string name="share_weibo">Weibo</string>
    <string name="share_email">Email</string>
    <string name="add_to_fav_success">Added to favorites</string>
    <string name="remove_from_fav_success">Removed from favorites</string>
    <string name="search_empty_input_not_allowed">Search input should not be empty</string>

    <string name="news_list_net_unavailable">No internet connection!</string>
    <string name="news_list_drag">Pull down for recommendation</string>
    <string name="news_list_drop">Drop</string>
    <string name="news_list_refresh">Refreshing...</string>
    <string name="news_list_confirm_delete">Confirm deletion of this news?</string>
    <string name="follow">Follow</string>
    <string name="bigimage_network_exception">Network exception, please retry</string>
    <string name="image_pager_indicator" translatable="false">%d/%d</string>
    <string name="image_pager_save">Save</string>
    <string name="image_pager_failed_to_gain_write_access">Failed to get write access to storage</string>
    <string name="image_pager_save_success">Successfully saved to %s</string>
    <string name="news_list_not_interested">Not interested</string>
    <string name="news_list_fake_news">Fake news</string>
    <string name="news_list_outdated">Outdated</string>
    <string name="news_list_block_reason">Why block?</string>
    <string name="news_list_notification">Updated %d news</string>
    <string name="news_list_notification_already_newest">Already newest</string>
    <string name="news_list_loading">Loading</string>
    <string name="news_list_block_item">Contains: %s</string>

    <string name="short_time_just_now">Just now</string>
    <string name="short_time_minute_ago">\u0020minute ago</string>
    <string name="short_time_minutes_ago">\u0020minutes ago</string>
    <string name="short_time_hour_ago">\u0020hour ago</string>
    <string name="short_time_hours_ago">\u0020hours ago</string>
    <string name="short_time_yesterday">Yesterday\u0020</string>
    <string name="followed">Followed</string>
    <string name="news_detail_title">Details</string>
    <string name="settings_night_mode_follow_sys">Enable night mode automatically</string>
    <string name="settings_night_mode_follow_sys_prompt">Require Android 9.0+</string>
    <string name="settings_night_mode_manual">Enable night mode manually</string>
    <string name="settings_section_title_theme">Theme config</string>
    <string name="settings_section_title_other">Other configs</string>
    <string name="username_placeholder" translatable="false">Username Placeholder</string>
    <string name="settings_cache_size">Cache Size: %s</string>
    <string name="share_wechat_not_installed">WeChat is not installed</string>
    <string name="share_success">Successfully shared</string>
    <string name="share_cancel">Sharing canceled</string>
    <string name="share_failure">Failed to share</string>

    <string name="video_list_title">Videos</string>

    <string name="log_in_or_sign_up">Log in / Sign Up</string>
    <string name="log_in_title">Log in</string>
    <string name="log_in_password">Password</string>
    <string name="log_in_email">Email</string>
    <string name="log_in_username">Username</string>
    <string name="log_in_no_account_notice">No account yet? Sign up.</string>
    <string name="log_in_remember_password">\u0020Remember Password</string>

    <string name="sign_up_user_name">User Name</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_password_confirm">Confirm Password</string>
    <string name="sign_up_title">Sign up</string>
    <string name="sign_up_has_account_notice">Already a member? Log in.</string>

    <string name="log_out">Log out</string>

    <string name="faved_prefix">Added to favorite %s</string>
    <string name="original_article_link">Original link: %s</string>
    <string name="no_email_client_installed">No email client is installed</string>
    <string name="send_email_prompt">Send Email</string>
    <string name="view_original_prompt">View Original</string>
    <string name="sign_up_fill_all_blanks">Please fill in all the required fields</string>
    <string name="sign_up_password_discrepancy">Passwords do not match</string>
    <string name="sign_up_invalid_email">Invalid email, please retry</string>
    <string name="sign_up_user_exists">Sign up failed. User already exists</string>
    <string name="sign_up_success">Successfully registered</string>
    <string name="sign_up_in_progress">Signing up</string>
    <string name="login_success">Successfully logged in</string>
    <string name="logout_success">Successfully logged out</string>
    <string name="login_fail">Failed to login</string>

    <string name="account_type" translatable="false">com.inftyloop.tech.accountType</string>
    <string name="content_authority" translatable="false">com.inftyloop.tech.contentAuthority</string>
    <string name="login_account_already_added">Account already added</string>
    <string name="edit_info_btn_title">Submit</string>
    <string name="edit_info_pwd">Current password</string>
    <string name="edit_info_pwd_new">New password(keep current if left blank)</string>
    <string name="edit_info_pwd_confim">New password confirm</string>
    <string name="edit_info_email">Email</string>
    <string name="edit_info_title">Edit Personal Info</string>
    <string name="edit_info_in_progress">In progress...</string>
    <string name="edit_info_success">Successfully edited info</string>
    <string name="edit_info_failure">Failed to edit info</string>
    <string name="edit_info_not_logged_in">Not logged in</string>
    <string name="clear_personal_pref">Clear personal preferences</string>
    <string name="clear_personal_pref_extra_info">Recommendations/blocked words</string>
    <string name="settings_section_user_title">User Settings</string>
    <string name="settings_confirm_logout">Confirm logout? All your perosnal preferences will be cleared</string>
    <string name="settings_confirm_clear_pref">Confirm clearing preferences?</string>
    <string name="settings_prefs_cleared">All preferences have been cleared</string>
    <string name="login_in_progress">Login in progress</string>
    <string name="video_parse_error">Video URL parse error</string>
    <string name="provider_name">Favorite news</string>
    <string name="sync_notification_title">Syncing</string>
    <string name="sync_notification_title_success">Syncing succeeded</string>
    <string name="sync_notification_title_failure">Syncing failed</string>
    <string name="sync_notification_content">Syncing favorite news in progress.</string>
    <string name="sync_notification_success_content">Now you can view your favorites.</string>
    <string name="sync_notification_failure_content">Please check Internet connection and retry.</string>
    <string name="settings_manual_sync">Manually sync data</string>
    <string name="settings_sync_in_progress">Syncing</string>
</resources>
