<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:background="?attr/app_background_color"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="48dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_divider_height"
                android:background="?attr/app_content_separator_color" />

            <LinearLayout
                android:id="@+id/rl_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp"
                    android:src="@mipmap/ic_user_email" />

                <View
                    android:id="@+id/viewName"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="?attr/app_background_dim_color" />

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/log_in_email"
                    android:textColor="?attr/foreground_text_color"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_user_name_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:src="@mipmap/ic_backspace_grey600_24dp"
                    android:visibility="invisible" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_divider_height"
                android:background="?attr/app_content_separator_color" />

            <LinearLayout
                android:id="@+id/rl_userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_userIconPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp"
                    android:src="@mipmap/ic_edittextupwd" />

                <View
                    android:id="@+id/viewPwd"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="?attr/app_background_dim_color" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="5dp"
                    android:hint="@string/log_in_password"
                    android:inputType="textPassword"
                    android:textColor="?attr/foreground_text_color"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_password_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:src="@mipmap/ic_backspace_grey600_24dp"
                    android:visibility="invisible" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_divider_height"
                android:background="?attr/app_content_separator_color" />

            <CheckBox
                android:id="@+id/cb_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:checked="false"
                android:duplicateParentState="false"
                android:text="@string/log_in_remember_password"
                android:textColor="?attr/foreground_text_color"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/round_corner_bg"
                android:gravity="center"
                android:text="@string/log_in_title"
                android:textColor="?attr/background_text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/log_in_no_account_notice" />
        </LinearLayout>
    </ScrollView>

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />
</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>